# clawbake

./: .gitignore  Cargo.toml  Dockerfile.build  README.md  build-release.sh  soul-eval-mode.patch
.coflounder/: CI-CD-IMPLEMENTATION.md  SOUL-EVAL-MODE-SUMMARY.md  soul-eval-mode-test-results.md
.coflounder/heartbeat/: 2026-03-20-1252.md
.github/: CI-CD.md  WORKFLOWS.md  danka.yml
.github/workflows/: danka-ready.yml  eval-matrix.yml  mode-eval.yml  soul-eval.yml
docs/: test-data-sources.md
docs/eval-modes/: 00-tracking.md  01-soul-mode.md  02-claude-mode.md  03-agents-mode.md  04-memory-mode.md  05-skills-mode.md
src/: cli.rs  config.rs  error.rs  export.rs  main.rs  types.rs
src/claude/: client.rs  models.rs
src/eval/: ablation.rs  convergence.rs  evaluator.rs  loop_runner.rs  mod.rs  optimizer.rs  planner.rs  runner.rs
src/io/: history.rs  identity.rs  mod.rs  state.rs
src/sandbox/: environment.rs  mod.rs  stubs.rs
src/tui/: app.rs  event.rs  mod.rs
src/tui/dashboard/: mod.rs  mutations.rs  progress.rs  scores.rs  transcript.rs
src/tui/wizard/: autofill.rs  config_step.rs  mod.rs  name_step.rs  personality_step.rs  role_step.rs  tools_step.rs  widgets.rs
